tests/baselines/reference/declarationEmitDefaultExport6.errors.txt
tests/cases/compiler/declarationEmitDefaultExport6.ts(1,14): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/compiler/declarationEmitDefaultExport6.ts(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== tests/cases/compiler/declarationEmitDefaultExport6.ts (2 errors) ====
    export class A {}
                 ~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    export default new A();
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    